--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                 </li>
                 <li>
                     <span class="fa-li"></span>
-                    <a href="!#">Statement</a>
+                    <a href="http://trzroy.me/resume/assets/img/FAQ.html">Statement</a>
                     <br />
                     - A look at the current state of employment in the technology space within Maine
                 </li>
