--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                             <span class="fa-li"></span>
                             <a href="http://trzroy.me/resume/assets/img/FAQ.html">Statement</a>
                             <br />
-                            - A look at the current state of employment in the technology space within Maine
+                            -  A look at the current state of employment in the technology space within Maine in the style of an FAQ document. 
                         </li>
                     </ul>
                 </div>
